Add scratch link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>Krazy0range</h1>
-	<p>This website was made with GitHub Pages!</p>
+	<p>Click <a href="https://scratch.mit.edu/users/Krazy0range/">here</a> for my scratch account!</p>
 </body>
 </html>
