Add other headers

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>Krazy0range</h1>
+	<h2>Accounts:</h2>
 	<p>Click <a href="https://scratch.mit.edu/users/Krazy0range/">here</a> for my scratch account!</p>
 </body>
 </html>
