--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <body>
 	<h1>Krazy0range</h1>
 	<h2>Accounts:</h2>
-	<p>Click <a href="https://scratch.mit.edu/users/Krazy0range/">here</a> for my scratch account!</p>
+	<ul>
+		<li><a href="https://scratch.mit.edu/users/Krazy0range/" target="_blank" rel="noopener noreferrer">Scratch</a></li>
+		<li><a href="https://replit.com/@Krazy0range/" target="_blank" rel="noopener noreferrer">Replit</a></li>
+	</ul>
+	
 </body>
 </html>
