--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<link rel="stylesheet" href=styles.css>
 </head>
 <body>
-	<h6>This website is still being developed lol</h6>
-	<h1>Krazy0range</h1>
-	<h2>Accounts:</h2>
-	<ul>
-		<li><a href="https://scratch.mit.edu/users/Krazy0range/" target="_blank" rel="noopener noreferrer">Scratch</a></li>
-		<li><a href="https://replit.com/@Krazy0range/" target="_blank" rel="noopener noreferrer">Replit</a></li>
-	</ul>
-	
+	<!-- <h6>This website is still being developed lol</h6> -->
+	<div class="main">
+		<h1 class="gradient-text">KRAZY</h1>
+		<!-- <h2>Accounts:</h2>
+		<ul>
+			<li><a href="https://scratch.mit.edu/users/Krazy0range/" target="_blank" rel="noopener noreferrer">Scratch</a></li>
+			<li><a href="https://replit.com/@Krazy0range/" target="_blank" rel="noopener noreferrer">Replit</a></li>
+		</ul> -->
+	</div>
 </body>
 </html>
