--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<!-- <h6>This website is still being developed lol</h6> -->
 	<div class="main">
 		<h1 class="gradient-text">KRAZY</h1>
+		<p>
+			Welcome to my site :)
+			<br>
+			I'm a 13 year old who likes <br>game and web development, <br>general programming, and <br>motion design.
+		</p>
 		<!-- <h2>Accounts:</h2>
 		<ul>
 			<li><a href="https://scratch.mit.edu/users/Krazy0range/" target="_blank" rel="noopener noreferrer">Scratch</a></li>
