--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
 	<link rel="stylesheet" href=styles.css>
 </head>
 <body>
-	<!-- <h6>This website is still being developed lol</h6> -->
 	<div class="main">
 		<h1 class="gradient-text">KRAZY</h1>
 		<p>
 			Welcome to my site :)
 			<br>
-			I'm a 13 year old who likes <br>game and web development, <br>general programming, and <br>motion design.
+			I'm a teenager who likes <br>game and web development, <br>programming in general, <br>and motion design.
 		</p>
-		<!-- <h2>Accounts:</h2>
-		<ul>
-			<li><a href="https://scratch.mit.edu/users/Krazy0range/" target="_blank" rel="noopener noreferrer">Scratch</a></li>
-			<li><a href="https://replit.com/@Krazy0range/" target="_blank" rel="noopener noreferrer">Replit</a></li>
-		</ul> -->
 	</div>
 </body>
 </html>
+
+<!-- <a href="https://replit.com/@Krazy0range/" target="_blank" rel="noopener noreferrer">Replit</a> -->
