add tab buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 			<br>
 			I'm a teenager who likes <br>game and web development, <br>programming in general, <br>and motion design.
 		</p>
+		<div class="tabs">
+			<button>Contact</button>
+			<button>Projects</button>
+		</div>
 	</div>
 </body>
 </html>
 
-<!-- <a href="https://replit.com/@Krazy0range/" target="_blank" rel="noopener noreferrer">Replit</a> -->
+<!-- target="_blank" rel="noopener noreferrer" -->
